# geipac

./: CMakeLists.txt  README.txt  datastore.cpp  datastore.h  genenvgen2i.cpp  genenvgen2i.h  global.cpp  global.h  loader.cpp  loader.h  logreg.cpp  logreg.h  main.cpp  messages.h  version.cmake  version_config.h.in
docs/: index.rst
